[gd_scene load_steps=2 format=3 uid="uid://ma0gnx554c83"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_j2oic"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j2oic")

[node name="ForestButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 496.0
offset_top = 371.0
offset_right = 624.0
offset_bottom = 435.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Forest
"

[node name="DesertButton" type="Button" parent="."]
offset_left = 496.0
offset_top = 248.0
offset_right = 624.0
offset_bottom = 312.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Desert
"

[node name="Label" type="Label" parent="."]
offset_left = 8.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 211.0
size_flags_horizontal = 4
text = "Controls
WASD - Move
L Click - Shoot
R Click - Melee
Shift - Dash
R - Reload
E - Interact/Buy"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 496.0
offset_top = 208.0
offset_right = 624.0
offset_bottom = 231.0
size_flags_horizontal = 4
text = "Level Select"
horizontal_alignment = 1

[connection signal="pressed" from="ForestButton" to="." method="_on_forest_button_pressed"]
[connection signal="pressed" from="DesertButton" to="." method="_on_desert_button_pressed"]
